# dlio_benchmark_s3

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  my-env  my-env2  pyproject.toml  requirements.txt  start_dlio.sh
dlio_benchmark/: main.py
dlio_benchmark/checkpointing/: checkpointing_factory.py  s3_checkpoint_writer.py
dlio_benchmark/configs/workload/: llama_7b_zero3.yaml  unet3d_h100.yaml
dlio_benchmark/data_generator/: generator_factory.py  npz_generator.py  npz_s3_generator.py
dlio_benchmark/data_loader/: torch_data_loader.py
dlio_benchmark/reader/: npz_reader.py  npz_s3_reader.py  reader_factory.py
dlio_benchmark/storage/: s3_storage.py  storage_factory.py
