[project]
name = "dlio_benchmark"
version = "2.0.0"
requires-python = ">=3.12"
dynamic = [
  "description",
  "readme",
  "authors",
  "keywords",
  "classifiers",
  "urls",
  "scripts",
  "dependencies",
  "optional-dependencies",
]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest]
timeout = 3000

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
